--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My homepage</title>
+    <title>나의 웹페이지</title>
 </head>
 <body>
-   <h1>My homepage</h1>
-   <!--여기서부터 내소개-->
-
-   <img src="판다.jpg" width="320" height="230" alt="판다 사진">
-
-   <p>반갑습니다. <br>저는 멀티미디어학부 20224757 정유진입니다.</p>
-   <p>이번 학기에 <b>자바프로그래밍</b> 강의를 수강하게 되었습니다.</p>
-   <p>열심히 수업에 참여 하겠습니다.</p>
-
-
-<h3>이번학기 수강 과목</h3>
-<ui>
-<li>웹콘텐츠 기획 및 디자인</li>
-<li>그래픽 미디어 디자인사</li>
-<li>자바프로그래밍</li>
-<li>뉴미디어와 공공디자인 프로젝트</li>
-<li>타이포그래피 디자인</li>
-<li>대학영어회화</li>
-</ui>
-
-
-
-
+    <h1>나의 작품</h1>
+    <ol>
+    <li><a href="cafe.html" target="_blank">내가 만든 카페 사이트</a></li>
+    <li>Coming soon...</li>
+    </ol>
 </body>
 </html>
